--- a/Atomic Team 3/Atomic Team 3/View/Base.lproj/Main.storyboard
+++ b/Atomic Team 3/Atomic Team 3/View/Base.lproj/Main.storyboard
@@ -228,7 +228,7 @@
                                 <items>
                                     <navigationItem title="Set New Goal" id="I7s-qE-CmT">
                                         <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="o4e-hL-G08">
-                                            <color key="tintColor" red="0.30196078430000001" green="0.10980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="tintColor" name="main_orange"/>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -264,7 +264,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system" title=" Create new goal">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
-                                    <color key="baseBackgroundColor" red="0.30196078430000001" green="0.10980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="baseBackgroundColor" name="main_orange"/>
                                 </buttonConfiguration>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Input book's title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dyP-tk-cqJ" customClass="TextField" customModule="Atomic_Team_3" customModuleProvider="target">
@@ -281,7 +281,7 @@
                             </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6F4-eg-LHB"/>
-                        <color key="backgroundColor" red="0.94901960780000005" green="0.95294117649999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="grey_bg"/>
                     </view>
                     <navigationItem key="navigationItem" id="7NI-4r-3kl"/>
                     <connections>
@@ -308,7 +308,7 @@
                                 <items>
                                     <navigationItem title="Edit Goal" id="7ue-38-BD7">
                                         <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="wl0-Jn-zpV">
-                                            <color key="tintColor" red="0.30196078430000001" green="0.10980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="tintColor" name="main_orange"/>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -356,7 +356,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="pencil" catalog="system" title=" Update changes">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
-                                    <color key="baseBackgroundColor" red="0.30196078430000001" green="0.10980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="baseBackgroundColor" name="main_orange"/>
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nFa-e2-mOs">
@@ -365,13 +365,13 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="trash" catalog="system" title=" Delete goal">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
-                                    <color key="baseForegroundColor" red="0.30196078430000001" green="0.10980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="baseBackgroundColor" red="0.94509803920000002" green="0.92549019610000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="baseForegroundColor" name="main_orange"/>
+                                    <color key="baseBackgroundColor" name="secondary_orange"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7zq-CD-PXE"/>
-                        <color key="backgroundColor" red="0.94901960780000005" green="0.95294117649999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="grey_bg"/>
                     </view>
                     <connections>
                         <outlet property="bookTitleTextField" destination="vyz-zm-jUP" id="8Kz-CW-8hP"/>
@@ -393,6 +393,9 @@
         <image name="timer" width="85" height="84"/>
         <image name="trash" catalog="system" width="121" height="128"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <namedColor name="grey_bg">
+            <color red="0.94901960784313721" green="0.95294117647058818" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="main_orange">
             <color red="0.30199998617172241" green="0.10999999940395355" blue="0.87099999189376831" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
